# shared-kernel

./: .envrc  .gitignore  ARCHITECTURE_REVIEW.md  CLAUDE.md  Jenkinsfile  README.md  REFERENCE.md  cabal.project  code-gen.yaml  docker-compose.yml  flake.nix  hie.yaml  stack-hie.yaml  stack.yaml  test-gst-einvoice.hs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  nix.yml
app/gateway/: beckn-gateway.cabal
app/mock-registry/: mock-registry.cabal
cli-tools/gql/: README.md  code-gen.sh  code-gen.yaml
dev/: pre-commit
docs/corporate-commute/: IMPLEMENTATION_PLAN.md
lib/beckn-core/: beckn-core.cabal  package.yaml
lib/beckn-core/src/Beckn/: Prelude.hs  Randomizer.hs  Serviceability.hs
lib/beckn-core/src/Beckn/Mock/: App.hs  Exceptions.hs  ExternalAPI.hs  Utils.hs
lib/beckn-core/src/Beckn/Prelude/: OrphanInstances.hs
lib/beckn-core/src/Beckn/Product/: MapSearch.hs
lib/beckn-core/src/Beckn/Scheduler/: App.hs  Environment.hs  Error.hs
lib/beckn-core/src/Beckn/Storage/: Esqueleto.hs
lib/beckn-core/src/Beckn/Types/: Amount.hs  App.hs  Base64.hs  BecknRequest.hs  Centesimal.hs  Common.hs  Error.hs  Geofencing.hs  Id.hs  MapSearch.hs  Predicate.hs  Registry.hs  SlidingWindowCounters.hs  Time.hs  TimeRFC339.hs  Version.hs
lib/beckn-core/src/Beckn/Utils/: App.hs  CalculateDistance.hs  Callback.hs  Common.hs  Context.hs  FlowLogging.hs  GenericPretty.hs  IOLogging.hs  JSON.hs  Logging.hs  Migration.hs  Predicates.hs  Registry.hs  Schema.hs  Service.hs  SignatureAuth.hs  SlidingWindowCounters.hs  SlidingWindowLimiter.hs  Text.hs  Time.hs  Validation.hs  Version.hs
lib/beckn-core/test/app/: Main.hs
lib/beckn-core/test/src/: Centesimal.hs  DistanceCalculation.hs  SignatureAuth.hs  Version.hs
lib/mobility-core/: mobility-core.cabal  package.yaml
lib/mobility-core/src/Kernel/: Exit.hs  Prelude.hs  Randomizer.hs  ServantMultipart.hs  Serviceability.hs
lib/mobility-core/src/Kernel/Beam/: Functions.hs  Operators.hs  Types.hs  Utils.hs
lib/mobility-core/src/Kernel/Connection/: EnvVars.hs  Postgres.hs  Types.hs
lib/mobility-core/src/Kernel/Data/: HeterogeneousList.hs
lib/mobility-core/src/Kernel/Mock/: App.hs  Exceptions.hs  ExternalAPI.hs  Utils.hs
lib/mobility-core/src/Kernel/Prelude/: OrphanInstances.hs
lib/mobility-core/src/Kernel/Sms/: Config.hs
lib/mobility-core/src/Kernel/Storage/: ClickhouseV2.hs  Esqueleto.hs  Hedis.hs  InMem.hs
lib/mobility-core/src/Kernel/Streaming/: MonadConsumer.hs  MonadProducer.hs
lib/mobility-core/src/Kernel/Tools/: ARTUtils.hs  Logging.hs  LoopGracefully.hs  Slack.hs  SystemEnv.hs
lib/mobility-core/src/Kernel/Types/: APISuccess.hs  ActorInfo.hs  App.hs  Base64.hs  BecknRequest.hs  Cac.hs  CacConfigs.hs  Cache.hs  CacheFlow.hs  Centesimal.hs  Common.hs  CommonImport.hs  Confidence.hs  CorporateTypes.hs  Credentials.hs  DeletedEntity.hs  (+32 more)
lib/mobility-core/test-integration/: Main.hs
lib/mobility-core/test/app/: Main.hs
lib/mobility-core/test/src/: APIExceptions.hs  Centesimal.hs  ComputeIntersectionTests.hs  CorporateTests.hs  DistanceCalculation.hs  GSTEInvoiceTest.hs  HedisQueries.hs  MetaCodecs.hs  PartialIndexTests.hs  Predicates.hs  Randomizer.hs  SettlementEmail.hs  SettlementMimeCsv.hs  SignatureAuth.hs  SlidingWindowLimiter.hs  SnippetsCheck.hs  TestSilentIOLogger.hs  Version.hs
test-settlement-parser/: README.md  test-settlement-parser.cabal
test-settlement-parser/output/billdesk/: debug-raw-mime.txt  email-attachment.csv.parsed.txt
test-settlement-parser/samples/billdesk/: email-attachment.csv
test-settlement-parser/shims/Kernel/: Prelude.hs
test-settlement-parser/shims/Kernel/Prelude/: OrphanInstances.hs
test-settlement-parser/shims/Kernel/Types/: Common.hs
test-settlement-parser/src/: Main.hs
(+267 files in other folders)
